--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+* {
+
+  padding: 0;
+  margin: 0;
+}
+
+
+
+html,
+body {
+
+  background-color: rgb(11, 11, 101);
+  width: 100vw;
+  height: 100vh;
+}
+
+.imagen-logo {
+
+  width: 40%;
+  height: 40%;
+
+}
+
 .App {
-  text-align: center;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imagen-contenedor {
+
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.contenedor-principal{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 550px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
